modification sur swagger
